# test-quarto-pixi-ci

./: .nojekyll  README.md  _quarto.yml  about.html  docker-compose.codespaces.yml  docker-compose.yml  index.html  index.qmd  robots.txt  search.json  sitemap.xml
.devcontainer/: postCreateCommands.sh
.devcontainer/tutorial_1_container/: devcontainer.json  docker-compose.codespaces.yml  postCreateCommand.sh
.devcontainer/tutorial_1b_container/: devcontainer.json  docker-compose.codespaces.yml  postCreateCommand.sh
.devcontainer/tutorial_2_container/: Dockerfile  devcontainer.json  docker-compose.codespaces.yml  postCreateCommand.sh
.devcontainer/tutorial_3_container/: devcontainer.json  docker-compose.codespaces.yml  postCreateCommand.sh  postCreateCommands_R.sh
.devcontainer/tutorial_3b_container/: devcontainer.json  docker-compose.codespaces.yml  postCreateCommand.sh
tutorials/tutorial_1/: environment.yml  index.html  index.ipynb  pyproject.toml  tutorial_1.ipynb
tutorials/tutorial_1b/: index.html  pyproject.toml
tutorials/tutorial_2/: index.html  index.ipynb  pyproject.toml  tutorial_2.ipynb
tutorials/tutorial_3/: index.html  index.ipynb  pixi.toml  pixi.toml.0  pyproject.toml
tutorials/tutorial_3b/: pyproject.toml
