[project]
authors = [{name = "Tyler Erickson", email = "tyler@vorgeo.com"}]
dependencies = []
name = "tutorial_2"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64", "linux-aarch64"]

[tool.pixi.pypi-dependencies]
tutorial_2 = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = "==3.12"
ipykernel = ">=6.29.5,<7"
shapely = ">=2.0.7,<3"
